--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ color: #FFFFFF;
 margin-top: 20px;
 margin-right: 20px;
 margin-left: 20px;}
-h1 {font-size: 42;
+h1 {font-size: 42px;
 text-align: center;
 padding: 15px;}
 h2 {font-size: 30px; color:#0D0D0D}
@@ -17,7 +17,7 @@ border-style: dashed; border-color: #FFFFFF; border-width: 10px;
 div {min-height: 125px; height: auto; padding: 20px; border-style: solid; border-color: #FFFFFF; border-width: 3px}
 .introduction{border-radius:15px; margin-top: 15px; line-height: 2}
 .red {background-color: #ff0000; text-align: right; border-style: solid; margin-left: 50px;  border: 0px 0px 2px 5px; border-color: #FFFFFF;}
-.blue {background-color: #0000ff; text-align: left; margin-right: 50px; border: 0,0,2px,5px;}
+.blue {background-color: #0000ff; text-align: left; margin-right: 50px; border: 0px,0px,2px,5px;}
 .blue h2 {color: #c4c4c4;}
 .blue p {color: #c4c4c4}
 .yellow {background-color: #ffff00; text-align: right; margin-left: 50px; border: 0px, 0px, 2px, 5px;}
