--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,12 @@ border-style: dashed; border-color: #FFFFFF; border-width: 10px;
 }
 div {min-height: 125px; height: auto; padding: 20px; border-style: solid; border-color: #FFFFFF; border-width: 3px}
 .introduction{border-radius:15px; margin-top: 15px; line-height: 2}
-.red {background-color: #ff0000; text-align: right; border-style: solid; margin-left: 50px;  border: 0px 0px 2px 5px; border-color: #FFFFFF;}
-.blue {background-color: #0000ff; text-align: left; margin-right: 50px; border: 0px,0px,2px,5px;}
+.red {background-color: #ff0000; text-align: right; border-style: solid; margin-left: 50px; border-style: solid; border-width: 0px 0px 2px 5px; border-color: #FFFFFF;}
+.blue {background-color: #0000ff; text-align: left; margin-right: 50px; border: 0px 0px 2px 5px;}
 .blue h2 {color: #c4c4c4;}
 .blue p {color: #c4c4c4}
-.yellow {background-color: #ffff00; text-align: right; margin-left: 50px; border: 0px, 0px, 2px, 5px;}
+.yellow {background-color: #ffff00; text-align: right; margin-left: 50px; border-width: 0px 0px 2px 5px;}
 .yellow p {color: #707070}
-.green {background-color: #008500; text-align: left; margin-right: 50px; border: 5px,2px,0px,0px;}
+.green {background-color: #008500; text-align: left; margin-right: 50px; border-width: 5px 2px 0px 0px;}
 footer {background: linear-gradient(90deg#000000, #0000ff 25% #0066ff 70%, #000000); border: 5px solid #FFFFFF;}
 footer p {font-size: 20px; text-align: right; padding-bottom: 15px; padding-top: 15px; padding-right: 15px;}
