--- a/css/style.css
+++ b/css/style.css
@@ -24,5 +24,5 @@ div {min-height: 125px; height: auto; padding: 20px; border-style: solid; border
 .yellow p {color: #707070}
 .green {background-color: #008500; text-align: left; margin-right: 50px; border-width: 2px 5px 0px 0px;}
 footer {background-image: linear-gradient(90deg, #000000, #0000ff 25% #0066ff 70%, #000000); border-style: solid; border-color: #FFFFFF; border-width: 5px;}
-footer p {font-size: 20px; text-align: right; padding: 15px, 15px, 15px, 0px;}
+footer p {font-size: 20px; text-align: right; padding: 15px 15px 15px 0px;}
     /* padding-bottom: 15px; padding-top: 15px; padding-right: 15px;} */
