--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,6 @@ div {min-height: 125px; height: auto; padding: 20px; border-style: solid; border
 .yellow {background-color: #ffff00; text-align: right; margin-left: 50px; border-width: 0px 0px 2px 5px;}
 .yellow p {color: #707070}
 .green {background-color: #008500; text-align: left; margin-right: 50px; border-width: 2px 5px 0px 0px;}
-footer {background-image: linear-gradient(90deg, #000000, #0000ff 25% #0066ff 70%, #000000); border-style: solid; border-color: #FFFFFF; border-width: 5px;}
+footer {background: linear-gradient(90deg, #000000, #0000ff 25% #0066ff 70%, #000000); border-style: solid; border-color: #FFFFFF; border-width: 5px;}
 footer p {font-size: 20px; text-align: right; padding: 15px 15px 15px 0px;}
     /* padding-bottom: 15px; padding-top: 15px; padding-right: 15px;} */
